# kdu-2026-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  app.py  code_review.md  docker-compose.yml  handson-answers.md  main.py  phase3.ipynb  phase4.ipynb  pyproject.toml  requirements.txt  yaml.py
.github/workflows/: ci.yml
LLMOps/: exercise-1.py
MCP/solutions/: complete_resume_mcp.py  requirements.txt
alembic/: README  env.py  script.py.mako
alembic/versions/: .gitkeep  20260409_0001_init_template_schema.py
api/: __init__.py  main.py  schemas.py
api/service/: main.py  streaming_chat_service.py
app/: __init__.py  graph.py  main.py  state.py
app/analytics/: __init__.py  evaluate_agent.py  langsmith_utils.py  report_langsmith.py  runner.py
app/api/: main.py  router.py
app/core/: __init__.py  config.py  exceptions.py  lifecycle.py  logging.py  middleware.py  security.py  startup_checks.py
app/data/: evaluation_examples.json  groq_model_pricing.json  mock_exchange_rates.json
app/db/: __init__.py  base.py  migrations.py  models.py  session.py
app/domain/: __init__.py
app/graph/: state.py  workflow.py
app/integrations/: __init__.py
app/llm/: modal.py
app/models/: __init__.py  user.py
app/nodes/: __init__.py  booking_handler.py  budget_guard.py  buy_stock.py  complaint_handler.py  cost_tracker.py  faq_handler.py  fetch_stock_price.py  get_portfolio_details.py  get_transactions.py  load_config.py  orchestrator_classifier.py  parse_input.py  sell_stock.py  shared_handler.py  trade_helpers.py  unknown.py
app/rag/: __init__.py  chunk_store.py  clean_text.py  embeddings.py  generate_answer.py  hybrid_ranker.py  load_data.py  pipeline.py  retriever.py  text_splitter.py  vector_store.py
app/repositories/: __init__.py  base.py  user.py
app/schema/: get_portfolio_details_schema.py  parse_input_schema.py  read_only_schema.py  trade_schema.py
app/schemas/: auth.py  chat.py  errors.py  health.py  user.py
app/services/: __init__.py  assistant.py  auth.py  config_loader.py  cost_calculator.py  health.py  llm_client.py  memory.py  model_registry.py  profile_store.py  prompt_manager.py  router.py
app/tools/: __init__.py  currency_tools.py  finnhub_tools.py  trade_tools.py  weather.py
app/utils/: __init__.py  helpers.py  logger.py  validators.py
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  actions.py  auth.py  chatkit_server.py  config.py  db.py  main.py  models.py  security.py  tools.py  widgets.py
backend/tests/: test_security.py
config/: budget.yaml  config.yaml  feature_flags.yaml  models.yaml  routing.yaml
customer_service/: __init__.py  agents.py  cli.py  concurrency.py  config.py  event_listener.py  logging_utils.py  query.py  replay.py  replay_main.py  state.py  voice.py  voice_flow.py
customer_service/audio/: __init__.py  runtime.py
customer_service/retrieval/: __init__.py  coordinator.py  crews.py  repositories.py  schemas.py  security.py  tools.py
customer_service/services/: __init__.py  openai_audio.py
docs/: design.md  template_guide.md
frontend/: README.md  api_client.py  app.py  index.html  package-lock.json  package.json  state.py  streamlit_app.py  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
handson-9/phase1/: README.md  backend.py  main.py  pyproject.toml
handson-9/phase1/config/: actions.py  config.yml  rails.co
kdu_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phase-1/: agents.py  circuit_breaker.py  cohere_embd.py  crews.py  main.py  medEmbed_embed.py  openai_embed.py  phase1.py  tasks.py  tools.py  voyage_embed.py
phase-2/: agents.yaml  crew_builder.py  main.py  phase2.py  tasks.py  tasks.yaml
phase-3/: agents.py  agents.yaml  bi_encoder.py  config_loader.py  cross_encoder.py  docs.py  flow.py  main.py  phase3.py  tasks.py  tasks.yaml
phase-4/: phase4.py  utils.py
phase-5/: phase5.py
services/: __init__.py  chat_service.py
src/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_api.py  test_audio_helpers.py  test_budget_guard.py  test_config_loader.py  test_cost_calculator.py  test_currency_features.py  test_graph_flow.py  test_observability.py  test_orchestrator_classifier.py  test_phase2_coordinator.py  test_phase2_security.py  test_phase3_compaction.py  test_phase3_concurrency.py  test_phase3_replay.py  test_prompt_manager.py  test_read_only_nodes.py  test_router.py  test_state.py  test_trade_flow.py  test_unknown_node.py
tools/: calculator_tool.py  tools.py  weather_tool.py
tri-model-assistant/: .gitignore  README.md  app.py  pyproject.toml
tri-model-assistant/docs/: design_notes.md
tri-model-assistant/sample_data/: sample_input.txt
tri-model-assistant/src/: __init__.py  cli.py  graph.py  models.py  nodes.py  qa.py  state.py  text_helpers.py  utils.py
tri-model-assistant/tests/: __init__.py  test_cli.py  test_graph.py  test_nodes.py  test_state.py
utils/: calculate_usage.py
(+88 files in other folders)
