[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-service-system"
version = "0.1.0"
description = "Voice-enabled multi-agent customer service system built with CrewAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "crewai>=0.130.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sounddevice>=0.5.0,<1.0.0",
]

[project.scripts]
customer-service = "customer_service.cli:main"

[tool.setuptools.packages.find]
where = ["."]
