[project]
name = "hybrid-graphrag-chatbot"
version = "0.1.0"
description = "A hybrid RAG chatbot combining vector search, keyword search, and graph-based retrieval for multi-hop reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-experimental>=0.0.47",
    "langchain-text-splitters>=0.0.1",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.22",
    "neo4j>=5.16.0",
    "pypdf>=4.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.3.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
