[project]
name = "chatkit-travel-agent-backend"
version = "0.1.0"
description = "Beginner-friendly FastAPI backend skeleton for a ChatKit travel booking assignment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "openai>=2.0.0",
  "pytest>=8.0.0",
  "httpx>=0.28.0",
]

# TODO:
# Add the ChatKit Python SDK dependency here once you decide which install
# source you want learners to use. This starter keeps the first version simple
# and local on purpose.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
