[project]
name = "phase1-guardrails-demo"
version = "0.1.0"
description = "Educational chatbot demo for prompt injection and PII protection with NeMo Guardrails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langsmith>=0.3.16",
    "langchain-openai>=1.2.1",
    "nemoguardrails>=0.19.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
